# django-renderpdf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENCE  Pipfile  README.md  README.rst  publish-release.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.builds/: python3.10.yml  python3.11.yml  python3.12.yml  python3.13.yml  python3.14.yml
.github/: FUNDING.yml
.github/workflows/: checks.yml  publish.yml  tests.yml
django_renderpdf/: __init__.py  helpers.py  views.py
docs/: conf.py  index.rst
docs/_static/: custom.css
testapp/: manage.py  settings.py  urls.py  views.py  wsgi.py
testapp/static/: styles.css
testapp/templates/: test_template_with_staticfile.html
testapp/testapp/: settings.py  wsgi.py
testapp/testapp/testmain/: views.py
testapp/testapp/testmain/tests/: test_views.py
testapp/tests/: test_helpers.py  test_views.py
tests/: manage.py
tests/testapp/: settings.py  urls.py  views.py
tests/testapp/templates/: test_template_with_staticfile.html
tests/testapp/tests/: test_helpers.py  test_views.py
